src/main.output
Nonterminals useless in grammar

   statements


Terminals unused in grammar

   T_STRING
   CHAR
   BOOL


Rules useless in grammar

  150 statements: statement
  151           | statements statement


Rules useless in parser due to conflicts

   23 expression-statement: SEMICOLON

   29 block-item: declaration


State 15 conflicts: 9 shift/reduce
State 18 conflicts: 9 shift/reduce
State 29 conflicts: 1 shift/reduce
State 87 conflicts: 32 reduce/reduce
State 97 conflicts: 31 reduce/reduce
State 98 conflicts: 2 shift/reduce
State 232 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation-unit $end

    1 translation-unit: external-declaration
    2                 | translation-unit external-declaration

    3 external-declaration: function-definition
    4                     | declaration

    5 function-definition: declaration-specifiers declarator compound-statement

    6 statement: SEMICOLON
    7          | declaration
    8          | compound-statement
    9          | expression-statement
   10          | selection-statement
   11          | iteration-statement
   12          | jump-statement

   13 jump-statement: KW_BREAK SEMICOLON
   14               | KW_CONTINUE SEMICOLON
   15               | KW_RET SEMICOLON
   16               | KW_RET assignment-expression SEMICOLON

   17 iteration-statement: KW_WHILE L_BRACKET expression R_BRACKET statement
   18                    | KW_DO statement KW_WHILE L_BRACKET expression R_BRACKET
   19                    | KW_FOR L_BRACKET SEMICOLON SEMICOLON R_BRACKET statement
   20                    | KW_FOR L_BRACKET expression SEMICOLON expression SEMICOLON expression R_BRACKET statement

   21 selection-statement: KW_IF L_BRACKET expression R_BRACKET statement
   22                    | KW_IF L_BRACKET expression R_BRACKET statement KW_ELSE statement

   23 expression-statement: SEMICOLON
   24                     | expression SEMICOLON

   25 compound-statement: L_BRACE block-item-list R_BRACE
   26                   | L_BRACE R_BRACE

   27 block-item-list: block-item
   28                | block-item-list block-item

   29 block-item: declaration
   30           | statement

   31 declaration: declaration-specifiers init-declarator-list SEMICOLON
   32            | declaration-specifiers

   33 declaration-specifiers: type-specifier
   34                       | type-specifier declaration-specifiers
   35                       | type-qualifier
   36                       | type-qualifier declaration-specifiers

   37 init-declarator-list: init-declarator
   38                     | init-declarator-list LO_COMMA init-declarator

   39 init-declarator: declarator
   40                | declarator RO_ASSIGN initializer

   41 initializer: assignment-expression
   42            | L_BRACE initializer-list R_BRACE

   43 initializer-list: initializer
   44                 | initializer-list LO_COMMA initializer

   45 expression: assignment-expression
   46           | expression LO_COMMA assignment-expression

   47 assignment-operator: RO_ASSIGN
   48                    | RO_AS_ADDEQ
   49                    | RO_AS_ANDEQ
   50                    | RO_AS_DIVEQ
   51                    | RO_AS_MULEQ
   52                    | RO_AS_OREQ
   53                    | RO_AS_SFTL_EQ
   54                    | RO_AS_SFTR_EQ
   55                    | RO_AS_SUBEQ

   56 assignment-expression: conditional-expression
   57                      | unary-expression assignment-operator assignment-expression

   58 conditional-expression: logical-OR-expression
   59                       | logical-OR-expression RO_TRI_QUES expression RO_TRI_COLON conditional-expression

   60 logical-OR-expression: logical-AND-expression
   61                      | logical-OR-expression LO_LGC_OR logical-AND-expression

   62 logical-AND-expression: inclusive-OR-expression
   63                       | logical-AND-expression LO_LGC_AND inclusive-OR-expression

   64 inclusive-OR-expression: exclusive-OR-expression
   65                        | inclusive-OR-expression LO_BIT_OR exclusive-OR-expression

   66 exclusive-OR-expression: AND-expression
   67                        | exclusive-OR-expression LO_BIT_XOR AND-expression

   68 AND-expression: equality-expression
   69               | AND-expression LO_BIT_AND equality-expression

   70 equality-expression: relational-expression
   71                    | equality-expression LO_EQ relational-expression
   72                    | equality-expression LO_N_EQ relational-expression

   73 relational-expression: shift-expression
   74                      | relational-expression LO_REL_L shift-expression
   75                      | relational-expression LO_REL_G shift-expression
   76                      | relational-expression LO_REL_LE shift-expression
   77                      | relational-expression LO_REL_GE shift-expression

   78 shift-expression: additive-expression
   79                 | shift-expression LO_SFT_L additive-expression
   80                 | shift-expression LO_SFT_R additive-expression

   81 additive-expression: multiplicative-expression
   82                    | additive-expression LO_ADD multiplicative-expression
   83                    | additive-expression LO_SUB multiplicative-expression

   84 multiplicative-expression: cast-expression
   85                          | multiplicative-expression LO_MUL cast-expression
   86                          | multiplicative-expression LO_DIV cast-expression
   87                          | multiplicative-expression LO_MOD cast-expression

   88 cast-expression: unary-expression
   89                | L_BRACKET type-specifier R_BRACKET cast-expression

   90 unary-operator: LO_BIT_AND
   91               | LO_MUL
   92               | LO_ADD
   93               | LO_SUB
   94               | LO_BIT_NOT
   95               | LO_LGC_NOT

   96 unary-expression: postfix-expression
   97                 | LO_AS_SELFINC unary-expression
   98                 | LO_AS_SELFDEC unary-expression
   99                 | unary-operator cast-expression

  100 postfix-expression: primary-expression
  101                   | postfix-expression L_SQ_BRACKET expression R_SQ_BRACKET
  102                   | postfix-expression LO_MEMBER IDENTIFIER
  103                   | postfix-expression LO_PT_MEMBER IDENTIFIER
  104                   | postfix-expression LO_AS_SELFINC
  105                   | postfix-expression LO_AS_SELFDEC
  106                   | postfix-expression L_BRACKET argument-expression-list R_BRACKET
  107                   | postfix-expression L_BRACKET R_BRACKET

  108 argument-expression-list: assignment-expression
  109                         | argument-expression-list LO_COMMA assignment-expression

  110 primary-expression: IDENTIFIER
  111                   | constant
  112                   | L_BRACKET expression R_BRACKET

  113 constant: INTEGER
  114         | STRING

  115 type-specifier: T_INT
  116               | T_CHAR
  117               | T_BOOL
  118               | T_VOID
  119               | T_SIGNED
  120               | T_UNSIGNED
  121               | struct-or-union-specifier

  122 struct-or-union-specifier: struct-or-union IDENTIFIER L_BRACE struct-declaration-list R_BRACE
  123                          | struct-or-union L_BRACE struct-declaration-list R_BRACE
  124                          | struct-or-union IDENTIFIER

  125 struct-or-union: KW_STRUCT
  126                | KW_UNION

  127 struct-declaration-list: struct-declaration
  128                        | struct-declaration-list struct-declaration

  129 struct-declaration: specifier-qualifier-list struct-declarator-list SEMICOLON

  130 specifier-qualifier-list: type-specifier
  131                         | type-specifier specifier-qualifier-list
  132                         | type-qualifier
  133                         | type-qualifier specifier-qualifier-list

  134 struct-declarator-list: struct-declarator
  135                       | struct-declarator-list LO_COMMA struct-declarator

  136 struct-declarator: declarator
  137                  | declarator COLON INTEGER

  138 declarator: pointer declarator
  139           | direct-declarator

  140 direct-declarator: IDENTIFIER
  141                  | direct-declarator L_SQ_BRACKET assignment-expression R_SQ_BRACKET
  142                  | direct-declarator L_BRACKET parameter-type-list R_BRACKET
  143                  | direct-declarator L_BRACKET R_BRACKET

  144 parameter-type-list: parameter-declaration
  145                    | parameter-type-list LO_COMMA parameter-declaration

  146 parameter-declaration: declaration-specifiers declarator
  147                      | declaration-specifiers

  148 pointer: LO_MUL

  149 type-qualifier: Q_CONST


Terminals, with rules where they appear

$end (0) 0
error (256)
T_CHAR (258) 116
T_INT (259) 115
T_STRING (260)
T_BOOL (261) 117
T_VOID (262) 118
LO_EQ (263) 71
LO_N_EQ (264) 72
RO_AS_ADDEQ (265) 48
RO_AS_SUBEQ (266) 55
RO_AS_MULEQ (267) 51
RO_AS_DIVEQ (268) 50
RO_AS_SFTL_EQ (269) 53
RO_AS_SFTR_EQ (270) 54
RO_AS_ANDEQ (271) 49
RO_AS_OREQ (272) 52
LO_AS_SELFINC (273) 97 104
LO_AS_SELFDEC (274) 98 105
RO_TRI_QUES (275) 59
RO_TRI_COLON (276) 59
LO_MUL (277) 85 91 148
LO_DIV (278) 86
LO_ADD (279) 82 92
LO_SUB (280) 83 93
LO_BIT_NOT (281) 94
LO_MOD (282) 87
LO_SFT_L (283) 79
LO_LGC_OR (284) 61
LO_LGC_AND (285) 63
LO_SFT_R (286) 80
LO_LGC_NOT (287) 95
LO_BIT_XOR (288) 67
LO_BIT_AND (289) 69 90
LO_BIT_OR (290) 65
RO_ASSIGN (291) 40 47
LO_COMMA (292) 38 44 46 109 135 145
KW_CONTINUE (293) 14
KW_BREAK (294) 13
KW_IF (295) 21 22
KW_FOR (296) 19 20
KW_RET (297) 15 16
KW_STRUCT (298) 125
KW_WHILE (299) 17 18
KW_DO (300) 18
KW_ELSE (301) 22
T_SIGNED (302) 119
T_UNSIGNED (303) 120
Q_CONST (304) 149
SEMICOLON (305) 6 13 14 15 16 19 20 23 24 31 129
COLON (306) 137
LO_REL_L (307) 74
LO_REL_G (308) 75
LO_REL_LE (309) 76
LO_REL_GE (310) 77
KW_UNION (311) 126
IDENTIFIER (312) 102 103 110 122 124 140
INTEGER (313) 113 137
CHAR (314)
BOOL (315)
STRING (316) 114
LO_MEMBER (317) 102
LO_PT_MEMBER (318) 103
L_BRACKET (319) 17 18 19 20 21 22 89 106 107 112 142 143
R_BRACKET (320) 17 18 19 20 21 22 89 106 107 112 142 143
L_SQ_BRACKET (321) 101 141
R_SQ_BRACKET (322) 101 141
L_BRACE (323) 25 26 42 122 123
R_BRACE (324) 25 26 42 122 123


Nonterminals, with rules where they appear

$accept (70)
    on left: 0
translation-unit (71)
    on left: 1 2, on right: 0 2
external-declaration (72)
    on left: 3 4, on right: 1 2
function-definition (73)
    on left: 5, on right: 3
statement (74)
    on left: 6 7 8 9 10 11 12, on right: 17 18 19 20 21 22 30
jump-statement (75)
    on left: 13 14 15 16, on right: 12
iteration-statement (76)
    on left: 17 18 19 20, on right: 11
selection-statement (77)
    on left: 21 22, on right: 10
expression-statement (78)
    on left: 23 24, on right: 9
compound-statement (79)
    on left: 25 26, on right: 5 8
block-item-list (80)
    on left: 27 28, on right: 25 28
block-item (81)
    on left: 29 30, on right: 27 28
declaration (82)
    on left: 31 32, on right: 4 7 29
declaration-specifiers (83)
    on left: 33 34 35 36, on right: 5 31 32 34 36 146 147
init-declarator-list (84)
    on left: 37 38, on right: 31 38
init-declarator (85)
    on left: 39 40, on right: 37 38
initializer (86)
    on left: 41 42, on right: 40 43 44
initializer-list (87)
    on left: 43 44, on right: 42 44
expression (88)
    on left: 45 46, on right: 17 18 20 21 22 24 46 59 101 112
assignment-operator (89)
    on left: 47 48 49 50 51 52 53 54 55, on right: 57
assignment-expression (90)
    on left: 56 57, on right: 16 41 45 46 57 108 109 141
conditional-expression (91)
    on left: 58 59, on right: 56 59
logical-OR-expression (92)
    on left: 60 61, on right: 58 59 61
logical-AND-expression (93)
    on left: 62 63, on right: 60 61 63
inclusive-OR-expression (94)
    on left: 64 65, on right: 62 63 65
exclusive-OR-expression (95)
    on left: 66 67, on right: 64 65 67
AND-expression (96)
    on left: 68 69, on right: 66 67 69
equality-expression (97)
    on left: 70 71 72, on right: 68 69 71 72
relational-expression (98)
    on left: 73 74 75 76 77, on right: 70 71 72 74 75 76 77
shift-expression (99)
    on left: 78 79 80, on right: 73 74 75 76 77 79 80
additive-expression (100)
    on left: 81 82 83, on right: 78 79 80 82 83
multiplicative-expression (101)
    on left: 84 85 86 87, on right: 81 82 83 85 86 87
cast-expression (102)
    on left: 88 89, on right: 84 85 86 87 89 99
unary-operator (103)
    on left: 90 91 92 93 94 95, on right: 99
unary-expression (104)
    on left: 96 97 98 99, on right: 57 88 97 98
postfix-expression (105)
    on left: 100 101 102 103 104 105 106 107, on right: 96 101 102
    103 104 105 106 107
argument-expression-list (106)
    on left: 108 109, on right: 106 109
primary-expression (107)
    on left: 110 111 112, on right: 100
constant (108)
    on left: 113 114, on right: 111
type-specifier (109)
    on left: 115 116 117 118 119 120 121, on right: 33 34 89 130 131
struct-or-union-specifier (110)
    on left: 122 123 124, on right: 121
struct-or-union (111)
    on left: 125 126, on right: 122 123 124
struct-declaration-list (112)
    on left: 127 128, on right: 122 123 128
struct-declaration (113)
    on left: 129, on right: 127 128
specifier-qualifier-list (114)
    on left: 130 131 132 133, on right: 129 131 133
struct-declarator-list (115)
    on left: 134 135, on right: 129 135
struct-declarator (116)
    on left: 136 137, on right: 134 135
declarator (117)
    on left: 138 139, on right: 5 39 40 136 137 138 146
direct-declarator (118)
    on left: 140 141 142 143, on right: 139 141 142 143
parameter-type-list (119)
    on left: 144 145, on right: 142 145
parameter-declaration (120)
    on left: 146 147, on right: 144 145
pointer (121)
    on left: 148, on right: 138
type-qualifier (122)
    on left: 149, on right: 35 36 132 133


State 0

    0 $accept: . translation-unit $end

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9

    translation-unit           go to state 10
    external-declaration       go to state 11
    function-definition        go to state 12
    declaration                go to state 13
    declaration-specifiers     go to state 14
    type-specifier             go to state 15
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    type-qualifier             go to state 18


State 1

  116 type-specifier: T_CHAR .

    $default  reduce using rule 116 (type-specifier)


State 2

  115 type-specifier: T_INT .

    $default  reduce using rule 115 (type-specifier)


State 3

  117 type-specifier: T_BOOL .

    $default  reduce using rule 117 (type-specifier)


State 4

  118 type-specifier: T_VOID .

    $default  reduce using rule 118 (type-specifier)


State 5

  125 struct-or-union: KW_STRUCT .

    $default  reduce using rule 125 (struct-or-union)


State 6

  119 type-specifier: T_SIGNED .

    $default  reduce using rule 119 (type-specifier)


State 7

  120 type-specifier: T_UNSIGNED .

    $default  reduce using rule 120 (type-specifier)


State 8

  149 type-qualifier: Q_CONST .

    $default  reduce using rule 149 (type-qualifier)


State 9

  126 struct-or-union: KW_UNION .

    $default  reduce using rule 126 (struct-or-union)


State 10

    0 $accept: translation-unit . $end
    2 translation-unit: translation-unit . external-declaration

    $end        shift, and go to state 19
    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9

    external-declaration       go to state 20
    function-definition        go to state 12
    declaration                go to state 13
    declaration-specifiers     go to state 14
    type-specifier             go to state 15
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    type-qualifier             go to state 18


State 11

    1 translation-unit: external-declaration .

    $default  reduce using rule 1 (translation-unit)


State 12

    3 external-declaration: function-definition .

    $default  reduce using rule 3 (external-declaration)


State 13

    4 external-declaration: declaration .

    $default  reduce using rule 4 (external-declaration)


State 14

    5 function-definition: declaration-specifiers . declarator compound-statement
   31 declaration: declaration-specifiers . init-declarator-list SEMICOLON
   32            | declaration-specifiers .

    LO_MUL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    $default  reduce using rule 32 (declaration)

    init-declarator-list  go to state 23
    init-declarator       go to state 24
    declarator            go to state 25
    direct-declarator     go to state 26
    pointer               go to state 27


State 15

   33 declaration-specifiers: type-specifier .
   34                       | type-specifier . declaration-specifiers

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9

    T_CHAR      [reduce using rule 33 (declaration-specifiers)]
    T_INT       [reduce using rule 33 (declaration-specifiers)]
    T_BOOL      [reduce using rule 33 (declaration-specifiers)]
    T_VOID      [reduce using rule 33 (declaration-specifiers)]
    KW_STRUCT   [reduce using rule 33 (declaration-specifiers)]
    T_SIGNED    [reduce using rule 33 (declaration-specifiers)]
    T_UNSIGNED  [reduce using rule 33 (declaration-specifiers)]
    Q_CONST     [reduce using rule 33 (declaration-specifiers)]
    KW_UNION    [reduce using rule 33 (declaration-specifiers)]
    $default    reduce using rule 33 (declaration-specifiers)

    declaration-specifiers     go to state 28
    type-specifier             go to state 15
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    type-qualifier             go to state 18


State 16

  121 type-specifier: struct-or-union-specifier .

    $default  reduce using rule 121 (type-specifier)


State 17

  122 struct-or-union-specifier: struct-or-union . IDENTIFIER L_BRACE struct-declaration-list R_BRACE
  123                          | struct-or-union . L_BRACE struct-declaration-list R_BRACE
  124                          | struct-or-union . IDENTIFIER

    IDENTIFIER  shift, and go to state 29
    L_BRACE     shift, and go to state 30


State 18

   35 declaration-specifiers: type-qualifier .
   36                       | type-qualifier . declaration-specifiers

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9

    T_CHAR      [reduce using rule 35 (declaration-specifiers)]
    T_INT       [reduce using rule 35 (declaration-specifiers)]
    T_BOOL      [reduce using rule 35 (declaration-specifiers)]
    T_VOID      [reduce using rule 35 (declaration-specifiers)]
    KW_STRUCT   [reduce using rule 35 (declaration-specifiers)]
    T_SIGNED    [reduce using rule 35 (declaration-specifiers)]
    T_UNSIGNED  [reduce using rule 35 (declaration-specifiers)]
    Q_CONST     [reduce using rule 35 (declaration-specifiers)]
    KW_UNION    [reduce using rule 35 (declaration-specifiers)]
    $default    reduce using rule 35 (declaration-specifiers)

    declaration-specifiers     go to state 31
    type-specifier             go to state 15
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    type-qualifier             go to state 18


State 19

    0 $accept: translation-unit $end .

    $default  accept


State 20

    2 translation-unit: translation-unit external-declaration .

    $default  reduce using rule 2 (translation-unit)


State 21

  148 pointer: LO_MUL .

    $default  reduce using rule 148 (pointer)


State 22

  140 direct-declarator: IDENTIFIER .

    $default  reduce using rule 140 (direct-declarator)


State 23

   31 declaration: declaration-specifiers init-declarator-list . SEMICOLON
   38 init-declarator-list: init-declarator-list . LO_COMMA init-declarator

    LO_COMMA   shift, and go to state 32
    SEMICOLON  shift, and go to state 33


State 24

   37 init-declarator-list: init-declarator .

    $default  reduce using rule 37 (init-declarator-list)


State 25

    5 function-definition: declaration-specifiers declarator . compound-statement
   39 init-declarator: declarator .
   40                | declarator . RO_ASSIGN initializer

    RO_ASSIGN  shift, and go to state 34
    L_BRACE    shift, and go to state 35

    $default  reduce using rule 39 (init-declarator)

    compound-statement  go to state 36


State 26

  139 declarator: direct-declarator .
  141 direct-declarator: direct-declarator . L_SQ_BRACKET assignment-expression R_SQ_BRACKET
  142                  | direct-declarator . L_BRACKET parameter-type-list R_BRACKET
  143                  | direct-declarator . L_BRACKET R_BRACKET

    L_BRACKET     shift, and go to state 37
    L_SQ_BRACKET  shift, and go to state 38

    $default  reduce using rule 139 (declarator)


State 27

  138 declarator: pointer . declarator

    LO_MUL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    declarator         go to state 39
    direct-declarator  go to state 26
    pointer            go to state 27


State 28

   34 declaration-specifiers: type-specifier declaration-specifiers .

    $default  reduce using rule 34 (declaration-specifiers)


State 29

  122 struct-or-union-specifier: struct-or-union IDENTIFIER . L_BRACE struct-declaration-list R_BRACE
  124                          | struct-or-union IDENTIFIER .

    L_BRACE  shift, and go to state 40

    L_BRACE   [reduce using rule 124 (struct-or-union-specifier)]
    $default  reduce using rule 124 (struct-or-union-specifier)


State 30

  123 struct-or-union-specifier: struct-or-union L_BRACE . struct-declaration-list R_BRACE

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9

    type-specifier             go to state 41
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    struct-declaration-list    go to state 42
    struct-declaration         go to state 43
    specifier-qualifier-list   go to state 44
    type-qualifier             go to state 45


State 31

   36 declaration-specifiers: type-qualifier declaration-specifiers .

    $default  reduce using rule 36 (declaration-specifiers)


State 32

   38 init-declarator-list: init-declarator-list LO_COMMA . init-declarator

    LO_MUL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    init-declarator    go to state 46
    declarator         go to state 47
    direct-declarator  go to state 26
    pointer            go to state 27


State 33

   31 declaration: declaration-specifiers init-declarator-list SEMICOLON .

    $default  reduce using rule 31 (declaration)


State 34

   40 init-declarator: declarator RO_ASSIGN . initializer

    LO_AS_SELFINC  shift, and go to state 48
    LO_AS_SELFDEC  shift, and go to state 49
    LO_MUL         shift, and go to state 50
    LO_ADD         shift, and go to state 51
    LO_SUB         shift, and go to state 52
    LO_BIT_NOT     shift, and go to state 53
    LO_LGC_NOT     shift, and go to state 54
    LO_BIT_AND     shift, and go to state 55
    IDENTIFIER     shift, and go to state 56
    INTEGER        shift, and go to state 57
    STRING         shift, and go to state 58
    L_BRACKET      shift, and go to state 59
    L_BRACE        shift, and go to state 60

    initializer                go to state 61
    assignment-expression      go to state 62
    conditional-expression     go to state 63
    logical-OR-expression      go to state 64
    logical-AND-expression     go to state 65
    inclusive-OR-expression    go to state 66
    exclusive-OR-expression    go to state 67
    AND-expression             go to state 68
    equality-expression        go to state 69
    relational-expression      go to state 70
    shift-expression           go to state 71
    additive-expression        go to state 72
    multiplicative-expression  go to state 73
    cast-expression            go to state 74
    unary-operator             go to state 75
    unary-expression           go to state 76
    postfix-expression         go to state 77
    primary-expression         go to state 78
    constant                   go to state 79


State 35

   25 compound-statement: L_BRACE . block-item-list R_BRACE
   26                   | L_BRACE . R_BRACE

    T_CHAR         shift, and go to state 1
    T_INT          shift, and go to state 2
    T_BOOL         shift, and go to state 3
    T_VOID         shift, and go to state 4
    LO_AS_SELFINC  shift, and go to state 48
    LO_AS_SELFDEC  shift, and go to state 49
    LO_MUL         shift, and go to state 50
    LO_ADD         shift, and go to state 51
    LO_SUB         shift, and go to state 52
    LO_BIT_NOT     shift, and go to state 53
    LO_LGC_NOT     shift, and go to state 54
    LO_BIT_AND     shift, and go to state 55
    KW_CONTINUE    shift, and go to state 80
    KW_BREAK       shift, and go to state 81
    KW_IF          shift, and go to state 82
    KW_FOR         shift, and go to state 83
    KW_RET         shift, and go to state 84
    KW_STRUCT      shift, and go to state 5
    KW_WHILE       shift, and go to state 85
    KW_DO          shift, and go to state 86
    T_SIGNED       shift, and go to state 6
    T_UNSIGNED     shift, and go to state 7
    Q_CONST        shift, and go to state 8
    SEMICOLON      shift, and go to state 87
    KW_UNION       shift, and go to state 9
    IDENTIFIER     shift, and go to state 56
    INTEGER        shift, and go to state 57
    STRING         shift, and go to state 58
    L_BRACKET      shift, and go to state 59
    L_BRACE        shift, and go to state 35
    R_BRACE        shift, and go to state 88

    statement                  go to state 89
    jump-statement             go to state 90
    iteration-statement        go to state 91
    selection-statement        go to state 92
    expression-statement       go to state 93
    compound-statement         go to state 94
    block-item-list            go to state 95
    block-item                 go to state 96
    declaration                go to state 97
    declaration-specifiers     go to state 98
    expression                 go to state 99
    assignment-expression      go to state 100
    conditional-expression     go to state 63
    logical-OR-expression      go to state 64
    logical-AND-expression     go to state 65
    inclusive-OR-expression    go to state 66
    exclusive-OR-expression    go to state 67
    AND-expression             go to state 68
    equality-expression        go to state 69
    relational-expression      go to state 70
    shift-expression           go to state 71
    additive-expression        go to state 72
    multiplicative-expression  go to state 73
    cast-expression            go to state 74
    unary-operator             go to state 75
    unary-expression           go to state 76
    postfix-expression         go to state 77
    primary-expression         go to state 78
    constant                   go to state 79
    type-specifier             go to state 15
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    type-qualifier             go to state 18


State 36

    5 function-definition: declaration-specifiers declarator compound-statement .

    $default  reduce using rule 5 (function-definition)


State 37

  142 direct-declarator: direct-declarator L_BRACKET . parameter-type-list R_BRACKET
  143                  | direct-declarator L_BRACKET . R_BRACKET

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9
    R_BRACKET   shift, and go to state 101

    declaration-specifiers     go to state 102
    type-specifier             go to state 15
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    parameter-type-list        go to state 103
    parameter-declaration      go to state 104
    type-qualifier             go to state 18


State 38

  141 direct-declarator: direct-declarator L_SQ_BRACKET . assignment-expression R_SQ_BRACKET

    LO_AS_SELFINC  shift, and go to state 48
    LO_AS_SELFDEC  shift, and go to state 49
    LO_MUL         shift, and go to state 50
    LO_ADD         shift, and go to state 51
    LO_SUB         shift, and go to state 52
    LO_BIT_NOT     shift, and go to state 53
    LO_LGC_NOT     shift, and go to state 54
    LO_BIT_AND     shift, and go to state 55
    IDENTIFIER     shift, and go to state 56
    INTEGER        shift, and go to state 57
    STRING         shift, and go to state 58
    L_BRACKET      shift, and go to state 59

    assignment-expression      go to state 105
    conditional-expression     go to state 63
    logical-OR-expression      go to state 64
    logical-AND-expression     go to state 65
    inclusive-OR-expression    go to state 66
    exclusive-OR-expression    go to state 67
    AND-expression             go to state 68
    equality-expression        go to state 69
    relational-expression      go to state 70
    shift-expression           go to state 71
    additive-expression        go to state 72
    multiplicative-expression  go to state 73
    cast-expression            go to state 74
    unary-operator             go to state 75
    unary-expression           go to state 76
    postfix-expression         go to state 77
    primary-expression         go to state 78
    constant                   go to state 79


State 39

  138 declarator: pointer declarator .

    $default  reduce using rule 138 (declarator)


State 40

  122 struct-or-union-specifier: struct-or-union IDENTIFIER L_BRACE . struct-declaration-list R_BRACE

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9

    type-specifier             go to state 41
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    struct-declaration-list    go to state 106
    struct-declaration         go to state 43
    specifier-qualifier-list   go to state 44
    type-qualifier             go to state 45


State 41

  130 specifier-qualifier-list: type-specifier .
  131                         | type-specifier . specifier-qualifier-list

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9

    $default  reduce using rule 130 (specifier-qualifier-list)

    type-specifier             go to state 41
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    specifier-qualifier-list   go to state 107
    type-qualifier             go to state 45


State 42

  123 struct-or-union-specifier: struct-or-union L_BRACE struct-declaration-list . R_BRACE
  128 struct-declaration-list: struct-declaration-list . struct-declaration

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9
    R_BRACE     shift, and go to state 108

    type-specifier             go to state 41
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    struct-declaration         go to state 109
    specifier-qualifier-list   go to state 44
    type-qualifier             go to state 45


State 43

  127 struct-declaration-list: struct-declaration .

    $default  reduce using rule 127 (struct-declaration-list)


State 44

  129 struct-declaration: specifier-qualifier-list . struct-declarator-list SEMICOLON

    LO_MUL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    struct-declarator-list  go to state 110
    struct-declarator       go to state 111
    declarator              go to state 112
    direct-declarator       go to state 26
    pointer                 go to state 27


State 45

  132 specifier-qualifier-list: type-qualifier .
  133                         | type-qualifier . specifier-qualifier-list

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    KW_STRUCT   shift, and go to state 5
    T_SIGNED    shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    Q_CONST     shift, and go to state 8
    KW_UNION    shift, and go to state 9

    $default  reduce using rule 132 (specifier-qualifier-list)

    type-specifier             go to state 41
    struct-or-union-specifier  go to state 16
    struct-or-union            go to state 17
    specifier-qualifier-list   go to state 113
    type-qualifier             go to state 45


State 46

   38 init-declarator-list: init-declarator-list LO_COMMA init-declarator .

    $default  reduce using rule 38 (init-declarator-list)


State 47

   39 init-declarator: declarator .
   40                | declarator . RO_ASSIGN initializer

    RO_ASSIGN  shift, and go to state 34

    $default  reduce using rule 39 (init-declarator)


State 48

   97 unary-expression: LO_AS_SELFINC . unary-expression

    LO_AS_SELFINC  shift, and go to state 48
    LO_AS_SELFDEC  shift, and go to state 49
    LO_MUL         shift, and go to state 50
    LO_ADD         shift, and go to state 51
    LO_SUB         shift, and go to state 52
    LO_BIT_NOT     shift, and go to state 53
    LO_LGC_NOT     shift, and go to state 54
    LO_BIT_AND     shift, and go to state 55
    IDENTIFIER     shift, and go to state 56
    INTEGER        shift, and go to state 57
    STRING         shift, and go to state 58
    L_BRACKET      shift, and go to state 114
